# TrainBoom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindPistache.cmake
doc/: IntervalManip.md  Route.md  Segment.md  Station.md  Ticket.md  Train.md  TrainBoom.md  User.md
doc/API/: Query.md  Route.md  Station.md  User.md  main.md
doc/Route/: Information.md  sell.md
doc/Ticket/: Attribute.md
doc/Train/: Train.md  getID.md  getRoute.md  get_ID.md  get_route.md  setID.md  setRoute.md  set_ID.md  set_route.md
doc/util/: CSV.md  Datetime.md  IntervalManip.md  stupid_ptr.md
doc/util/Datetime/: Datetime.md  Duration.md
doc/util/IntervalManip/: IntervalManip.md
doc/util/stupid_ptr/: operator=.md  stupid_ptr.md
drafts/: classes.md  progress.md  project-structure.md
src/: API.hpp  APITester.sh  BinaryFile.hpp  Blob.hpp  CMakeLists.txt  DataManager.hpp  DataManager2.hpp  Id.hpp  Information.hpp  Makefile  Order.hpp  Route.hpp  Segment.hpp  Station.hpp  Ticket.hpp  Train.hpp  TrainBoom.hpp  User.hpp  exception.hpp  exception.hpp~  main.cpp  route_util.hpp  test_builder.cpp  test_runner.cpp  util.hpp
src/test/: API_route_tests.py  API_tests.cpp  BinaryFile_tests.cpp  Blob_tests.cpp  CSV_tests.cpp  DataManager_tests.cpp  Datetime_tests.cpp  IntervalManip_tests.cpp  Json_tests.cpp  Order_tests.cpp  Route.json  Route_tests.cpp  Segment_tests.cpp  Station_tests.cpp  Ticket_tests.cpp  TrainBoom_tests.cpp  Train_tests.cpp  User.json  User_tests.cpp  log_tests.cpp  map_tests.cpp  query.json  stupid_ptr_tests.cpp  test.csv
src/util/: BinaryFile.hpp  CSV.hpp  CSV.hpp~  Datetime.hpp  Datetime.hpp~  IntervalManip.hpp  Json.hpp  Ticket.hpp  exception.hpp  log.hpp  map.hpp  pair.hpp  set.hpp  stupid_ptr.cpp  stupid_ptr.hpp  vector.hpp
